# exemplos_blog

cmake/: README.md
cmake/ex01/: CMakeLists.txt  helloworld.cpp
cmake/ex02/: CMakeLists.txt
cmake/ex02/includes/: Mensagem.h
cmake/ex02/src/: Mensagem.cpp  main.cpp
